--- a/site/styles/_wishlist.scss
+++ b/site/styles/_wishlist.scss
@@ -41,6 +41,7 @@
     align-items: center;
     flex-direction: row;
     justify-content: center;
+    white-space: nowrap;
   }
 }
 
